crates/lazuli_analyzer/tests/snapshots/baseline_snapshot__crm_ast.snap
---
source: crates/lazuli_analyzer/tests/baseline_snapshot.rs
assertion_line: 17
expression: document
---
{
  "app": "CRM",
  "aggregates": [
    {
      "name": "Customer",
      "fields": [
        {
          "name": "name",
          "ty": "Text",
          "modifiers": [
            {
              "kind": "Required"
            }
          ],
          "span": {
            "start": 32,
            "end": 51
          }
        },
        {
          "name": "email",
          "ty": "Email",
          "modifiers": [
            {
              "kind": "Required"
            },
            {
              "kind": "Unique"
            }
          ],
          "span": {
            "start": 54,
            "end": 82
          }
        },
        {
          "name": "status",
          "ty": "CustomerStatus",
          "modifiers": [
            {
              "kind": "Default",
              "value": "Lead"
            }
          ],
          "span": {
            "start": 85,
            "end": 120
          }
        }
      ],
      "commands": [
        {
          "name": "Create",
          "input": [
            "name",
            "email"
          ],
          "policy": "customer.create",
          "emits": [
            "CustomerCreated"
          ],
          "span": {
            "start": 124,
            "end": 219
          }
        }
      ],
      "queries": [
        {
          "name": "List",
          "search": [
            "name",
            "email"
          ],
          "filters": [
            "status"
          ],
          "span": {
            "start": 223,
            "end": 280
          }
        }
      ],
      "surfaces": [
        {
          "name": "App",
          "list_columns": [
            "name",
            "email",
            "status"
          ],
          "form_fields": [
            "name",
            "email"
          ],
          "detail_fields": [
            "name",
            "email",
            "status"
          ],
          "span": {
            "start": 284,
            "end": 404
          }
        }
      ],
      "span": {
        "start": 9,
        "end": 406
      }
    },
    {
      "name": "Project",
      "fields": [
        {
          "name": "title",
          "ty": "Text",
          "modifiers": [
            {
              "kind": "Required"
            }
          ],
          "span": {
            "start": 430,
            "end": 450
          }
        },
        {
          "name": "ownerEmail",
          "ty": "Email",
          "modifiers": [
            {
              "kind": "Required"
            }
          ],
          "span": {
            "start": 453,
            "end": 479
          }
        },
        {
          "name": "active",
          "ty": "Boolean",
          "modifiers": [
            {
              "kind": "Default",
              "value": "true"
            }
          ],
          "span": {
            "start": 482,
            "end": 510
          }
        }
      ],
      "commands": [
        {
          "name": "Create",
          "input": [
            "title",
            "ownerEmail"
          ],
          "policy": "project.create",
          "emits": [
            "ProjectCreated"
          ],
          "span": {
            "start": 514,
            "end": 613
          }
        }
      ],
      "queries": [
        {
          "name": "List",
          "search": [
            "title",
            "ownerEmail"
          ],
          "filters": [
            "active"
          ],
          "span": {
            "start": 617,
            "end": 680
          }
        }
      ],
      "surfaces": [
        {
          "name": "App",
          "list_columns": [
            "title",
            "ownerEmail",
            "active"
          ],
          "form_fields": [
            "title",
            "ownerEmail",
            "active"
          ],
          "detail_fields": [],
          "span": {
            "start": 684,
            "end": 786
          }
        }
      ],
      "span": {
        "start": 408,
        "end": 788
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 789
  }
}
